--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "font-awesome": "^4.7.0",
     "node-sass": "^4.7.2",
     "nuxt": "^1.1.1",
+    "prismjs": "^1.9.0",
     "sass-loader": "^6.0.6",
     "vue": "^2.5.13",
+    "vue-markdown": "^2.2.4",
     "vue-server-renderer": "^2.5.13",
     "vue-template-compiler": "^2.5.13"
   }
